--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 alembic==0.9.9
 astroid==2.0
+blinker==1.4
 click==6.7
 Flask==1.0.2
 Flask-Login==0.4.1
+Flask-Mail==0.9.1
 Flask-Migrate==2.1.1
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
@@ -14,6 +16,7 @@ Mako==1.0.7
 MarkupSafe==1.0
 mccabe==0.6.1
 pkg-resources==0.0.0
+PyJWT==1.6.4
 python-dateutil==2.7.3
 python-editor==1.0.3
 six==1.11.0
