--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ alembic==0.9.9
 astroid==2.0
 blinker==1.4
 click==6.7
+dominate==2.3.1
 Flask==1.0.2
+Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
 Flask-Migrate==2.1.1
@@ -22,6 +24,7 @@ python-editor==1.0.3
 six==1.11.0
 SQLAlchemy==1.2.7
 typed-ast==1.1.0
+visitor==0.1.3
 Werkzeug==0.14.1
 wrapt==1.10.11
 WTForms==2.1
