--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 alembic==0.9.9
 astroid==2.0
+Babel==2.6.0
 blinker==1.4
 click==6.7
 dominate==2.3.1
 Flask==1.0.2
+Flask-Babel==0.11.2
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
@@ -11,6 +13,7 @@ Flask-Migrate==2.1.1
 Flask-Moment==0.6.0
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
+guess-language-spirit==0.5.3
 isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
@@ -22,6 +25,7 @@ pkg-resources==0.0.0
 PyJWT==1.6.4
 python-dateutil==2.7.3
 python-editor==1.0.3
+pytz==2018.5
 six==1.11.0
 SQLAlchemy==1.2.7
 typed-ast==1.1.0
